...

  useEffect(() =>{
    setCardRole(UserInfo.role)
  })

  useEffect(() => {
    if (UserRole === 'Sent'){
      setSenderOrReceiver("To")
    } else {
      setSenderOrReceiver("From")
    }
  })

...
        showMessage({
          floating : true,
          message : 'Blocked ' + UserInfo.username,
          backgroundColor : '#014421',
          color : '#F9A800',
        })
        if (UserRole === 'All Friends' || UserRole === 'Received' || UserRole === 'Sent' || UserRole === 'Mutual'){
          handler(UserInfo, UserRole === 'Received')
        } else {
          onRefresh()
        }
      })
      .catch(function (error) {
...
        onPress: AdminRemoveSelf,
        style : 'destructive'
      },
    ]);
  }

  const unfriend = function() {
    return (
        <Pressable
          onPress={clickedUnfriend}
          style = {{margin : "4%"}}
          testID = "unfriend"
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/iD9p5iH.png'}}/>
        </Pressable>
    );
  }

  const block = function() {
    return (
        <Pressable
          onPress={clickedBlock}
          style = {{margin : "4%"}}
          testID = "block"
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/U7hfisP.png'}}/>
        </Pressable>
    );
  }

  const kick = function(){
    return (
        <Pressable
          onPress={clickedKick}
          style = {{margin : "4%"}}
          testID = "kick"
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/ngSIL5J.png'}}/>
        </Pressable>
    );
  }

  const ban = function(){
    return (
        <Pressable
          onPress={clickedBan}
          style = {{margin : "4%"}}
          testID = "ban"
        >
...

  const addAdmin = function(){
    return (
        <Pressable
          onPress={clickedAddAdmin}
          style = {{margin : "4%"}}
          testID = "add admin"
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/cQntMzs.png'}}/>
        </Pressable>
    );
  }

  const removeAdmin = function(){
    return (
        <Pressable
          onPress={clickedRemoveAdmin}
          style = {{margin : "4%"}}
          testID = "remove admin"
        >
          <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/7wDqjHS.png'}}/>
        </Pressable>
    );
  }

...

  const addFriend = function(){
    return(
    <Pressable
      onPress={AddFriend}
      style = {{margin : "4%"}}
      testID = "add friend"
    >
      <Image style ={ImageStyles.AcceptOrDecline} source={{uri: 'https://imgur.com/ggWVwz6.png'}}/>
    </Pressable>
    )
  }

...
