...
import ListenerHealthSensor from '../components/Sensors/ListenerHealthSensor';
import ZeroItem from '../components/shared/ZeroItem';
import { useFocusEffect } from '@react-navigation/native';

function ChallengesPage(props): JSX.Element {
  const [update, setUpdate] = useState(true);
  const [titleName, setTitleName] = useState('Current')
  const [count, setCount] = useState(0)
  const [ChallengeData, setChallengeData] = useState([])
  const [globalChallengeData, setGlobalChallengeData] = useState([])
  const [availableCount, setAvailableCount] = useState('')
  const [isCurrent, setIsCurrent] = useState(true)
  const [challengeImage, setChallengeImage] = useState("https://imgur.com/2BHAmsN.png")
...
    if(isCurrent){
      setTitleName("Current")
      getChallengeData()
      setChallengeImage("https://imgur.com/2BHAmsN.png")
    }
    else{
      setTitleName("Weekly")
      getGlobalChallengeData()
      setChallengeImage("https://imgur.com/j33n2DQ.png")
    }
    getIncomingImage()
  }, [isCurrent]);

...
