...
  var title = ''
  var sentUser = ''
  if (!isWeekly){
    title = Challenge.challengeType.charAt(0).toUpperCase() + Challenge.challengeType.slice(1) + ' Challenge'
    sentUser = "      " + Challenge.sentUser
  } else {
    title = 'Global Challenge'
    sentUser = '     Tread Mobile'
  }
  return(
    <View style={modalstyle.container}>
      <View style = {modalstyle.dragDownContainer}>
        <DragDownBar/>
...
